CHATS_SIT/force-app/main/default/objects/batchsit_t_sub_pmt__x.object
<CustomObject>
    <description>batchsit$t_sub_pmt</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sub_pmt</externalName>
    <fields>
        <fullName>amt_copay_pmt_sub__c</fullName>
        <description>amt_copay_pmt_sub</description>
        <externalDeveloperName>amt_copay_pmt_sub</externalDeveloperName>
        <label>Total Sub Payment Parent Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_rate_pmt_sub__c</fullName>
        <description>amt_rate_pmt_sub</description>
        <externalDeveloperName>amt_rate_pmt_sub</externalDeveloperName>
        <label>Total Sub Payment Rate Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_total_pmt_sub__c</fullName>
        <description>amt_total_pmt_sub</description>
        <externalDeveloperName>amt_total_pmt_sub</externalDeveloperName>
        <label>Total Sub Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_slot_pmt_sub__c</fullName>
        <externalDeveloperName>amt_slot_pmt_sub</externalDeveloperName>
        <label>Total Sub Payment Slot Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_status_pmt_sub__c</fullName>
        <description>cde_status_pmt_sub</description>
        <externalDeveloperName>cde_status_pmt_sub</externalDeveloperName>
        <label>Sub Payment Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Sub Payment</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_period_serv__c</fullName>
        <description>idn_period_serv</description>
        <externalDeveloperName>idn_period_serv</externalDeveloperName>
        <label>Service Period ID</label>
        <length>50</length>
        <referenceTargetField>T_SERV_PERIOD__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SERV_PERIOD__c</referenceTo>
        <relationshipLabel>Sub Payment</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt__c</fullName>
        <description>idn_pmt</description>
        <externalDeveloperName>idn_pmt</externalDeveloperName>
        <label>Payment ID</label>
        <length>50</length>
        <referenceTargetField>T_PAYMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PAYMT__c</referenceTo>
        <relationshipLabel>Sub Payment</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_sub__c</fullName>
        <description>idn_pmt_sub</description>
        <externalDeveloperName>idn_pmt_sub</externalDeveloperName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_slot_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>idn_slot_contract</externalDeveloperName>
        <label>Slot Contract</label>
        <referenceTo>T_SLOT_CONTRACT__c</referenceTo>
        <relationshipLabel>Sub Payment</relationshipLabel>
        <relationshipName>Sub_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Sub Payment</pluralLabel>
</CustomObject>